--- a/style.css
+++ b/style.css
@@ -6,18 +6,21 @@
     outline: none; border: none;
     text-decoration: none;
     text-transform: capitalize;
+    
+    
   }
   
   html{
     font-size: 62.5%;
     overflow-x: hidden;
     scroll-behavior: smooth;
+    background-color: rgb(247, 238, 247);
   }
   
   section{
     padding: 30px 7%;
   }
-  
+
   .heading{
     font-size: 40px;
     color: #2325;
@@ -57,16 +60,16 @@
     right: 0;
     z-index: 1000;
     background: #fff;
-    box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
+    box-shadow: 0.3px 0.8px rgba(0,0,0,.1);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2rem 9%;}
+    padding: 20px 9%;}
   
   .header .logo{
     font-size: 15px;
     font-weight: bolder;
-    color: #2325;}
+    color: rgba(5, 32, 57, 0.936);}
   
   .header .logo img{
     width: 60px;}
@@ -107,7 +110,7 @@
   
   .home .content h3{
     font-size: 60px;
-    color: #2325;
+    color: rgba(5, 32, 57, 0.936);
   }
   
   .home .content h3 span{
@@ -134,7 +137,7 @@
   /* teacher */
   .teacher .box-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 15px;
   }
   
@@ -144,11 +147,13 @@
     text-align: center;
     box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
     border-radius: 20px;
+    background-image: url(bac.jpg);
   }
   
   .teacher .box-container .box img{
     height: 300px;
     width: 250px;
+    border-radius: 40px;
   }
   
   .teacher .box-container .box h3{
@@ -170,25 +175,17 @@
   /* gallery */
   .gallery .gallery-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap: 2rem;
-  }
-  
-  .gallery .gallery-container .box{
-    height: 100%;
-    position: relative;
-    overflow: hidden;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
   }
   
   .gallery .gallery-container img{
     height: 100%;
     width: 100%;
     object-fit: cover;
+    border-radius: 50px;
   }
-  
-  .gallery .gallery-container .box:hover img{
-    transform: scale(1.2);
-  }/* end */
+  /* end */
   
   
   /* footer */
@@ -304,6 +301,3 @@
       font-size: 3.5rem;
     }
   }
-  
-  
-  
