--- a/style.css
+++ b/style.css
@@ -147,18 +147,18 @@
     text-align: center;
     box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
     border-radius: 20px;
-    background-image: url(bac.jpg);
+    background-color: rgb(249, 14, 143);
   }
   
   .teacher .box-container .box img{
-    height: 300px;
+    height: 180px;
     width: 250px;
-    border-radius: 40px;
+    border-radius: 20px;
   }
   
   .teacher .box-container .box h3{
     font-size: 25px;
-    color: #2325;
+    color: rgb(222, 185, 76);
   }
   
   .teacher .box-container .box p{
@@ -252,11 +252,11 @@
     }
   
     .header{
-      padding: 2rem 3rem;
+      padding: 20px 30px;
     }
   
     section{
-      padding: 3rem;
+      padding: 30px;
     }
   
   }
@@ -269,26 +269,27 @@
   
     .header .navbar{
       position: absolute;
-      top: 110%; right: -110%;
-      width: 30rem;
-      box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
-      border-radius: .5rem;
+      width: 300px;
+      top: 110%; 
+      right: -110%;
+      box-shadow: 5px 15px rgba(0,0,0,.1);
+      border-radius: 5px;
       background: #fff;
     }
   
     .header .navbar.active{
-      right: 2rem;
+      right: 20px;
       transition: .4s linear;
     }
   
     .header .navbar a{
-      font-size: 2rem;
-      margin: 2rem 2.5rem;
+      font-size: 20px;
+      margin: 20px 25px;
       display: block;
     }
   
     .home .content h3{
-      font-size: 4.5rem;
+      font-size: 45px;
     }
   
   }
@@ -298,6 +299,6 @@
       font-size: 50%;
     }
     .home .content h3{
-      font-size: 3.5rem;
+      font-size: 35px;
     }
   }
