--- a/style.css
+++ b/style.css
@@ -200,7 +200,22 @@ p {
 
   
   /* end */
-  
+  table, th, td{
+    border: 4px solid gray;
+    border-style: groove;
+    border-collapse: collapse;
+    margin: auto;
+    width: 750px;
+    height: 80px;
+    background-color: rgb(126, 227, 199);
+
+}
+
+td{
+    padding: 10px;
+    font-size: 24px;
+
+}  
   
   /* CSS of the gallery section */
   .gallery .gallery-container{
@@ -310,4 +325,21 @@ p {
       font-size: 50%;}
     .home .content h3{
       font-size: 35px;}
-  }/* end */
+  }
+          table, th, td{
+            border: 4px solid gray;
+            border-style: groove;
+            border-collapse: collapse;
+            margin: auto;
+            width: 750px;
+            height: 80px;
+            background-color: rgb(126, 227, 199);
+        
+        }
+
+        td{
+            padding: 10px;
+            font-size: larger;
+
+        }
+  /* end */
